<resources>
    <string name="app_name">Chat Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="splash_image">Splash Image</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="click">Click</string>
    <string name="signup">Signup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_passwords">Forgot Password?</string>
    <string name="email_address">Email Address</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">← Back to Login</string>
</resources>